--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,17 @@
 						<!-- <excludeFilterFile>${rootDir}findbugs-exclude.xml</excludeFilterFile> -->
 					</configuration>
 				</plugin>
+				<plugin>
+					<groupId>external.atlassian.jgitflow</groupId>
+					<artifactId>jgitflow-maven-plugin</artifactId>
+					<version>1.0-m5</version>
+					<configuration>
+						<noDeploy>true</noDeploy>
+						<flowInitContext>
+							<developBranchName>qa</developBranchName>
+						</flowInitContext>
+					</configuration>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
